[tool.poetry]
name = "cython_bbox"
version = "0.1.0"
description = ""
authors = ["hykyo-25 <kyohei.530@icloud.com>"]
readme = "README.md"
build = 'build.py'

[tool.poetry.dependencies]
python = ">=3.6.3"

[build-system]
requires = ["poetry-core", "setuptools>=18.0","Cython","numpy"]
build-backend = "poetry.core.masonry.api"
